FEAT: Add server service
